# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_player_framework/avcodec"

ohos_unittest("avcodec_native_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./native/audiodecoder/",
    "./native/audioencoder/",
    "./native/avformat/",
    "./native/avmemory/",
    "./native/surface/",
    "./native/videodecoder/",
    "./native/videoencoder/",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//graphic/graphic_2d/interfaces/innerkits/surface",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
    "//foundation/multimedia/player_framework/test/unittest/common/include",
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  sources = [
    "./native/audiodecoder/audiodec_native_mock.cpp",
    "./native/audioencoder/audioenc_native_mock.cpp",
    "./native/avcodec_mock_factory.cpp",
    "./native/avformat/avformat_native_mock.cpp",
    "./native/avmemory/avmemory_native_mock.cpp",
    "./native/surface/surface_native_mock.cpp",
    "./native/videodecoder/videodec_native_mock.cpp",
    "./native/videoencoder/videoenc_native_mock.cpp",
  ]

  deps = [
    "//foundation/graphic/graphic_2d:libsurface",
    "//foundation/graphic/graphic_2d/frameworks/surface:surface",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
    "//foundation/window/window_manager/wm:libwm",
  ]

  resource_config_file = "//foundation/multimedia/player_framework/test/unittest/resources/ohos_test.xml"
}
