# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_media_standard/engine"

ohos_unittest("player_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//foundation/multimedia/media_standard/services/engine/gstreamer/player",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [ "src/player_unit_test.cpp" ]

  deps = [ 
    "//foundation/multimedia/media_standard/services/engine/gstreamer/player:media_engine_gst_player",
  ]

  resource_config_file = "//foundation/multimedia/media_standard/test/resources/ohos_test.xml"
}
