# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_media_standard/service"

ohos_unittest("service_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//foundation/multimedia/media_standard/interfaces/inner_api/native",
    "//foundation/multimedia/media_standard/frameworks/native/player",
    "//foundation/multimedia/media_standard/services/include",
    "//foundation/multimedia/media_standard/services/services/engine_intf",
    "//foundation/multimedia/media_standard/services/services/player/server",
    "//graphic/graphic/interfaces/innerkits/surface",
    "//foundation/windowmanager/interfaces/innerkits/wm"
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  sources = [ "src/player_service_unit_test.cpp" ]

  deps = [ 
    "//foundation/multimedia/media_standard/interfaces/inner_api/native:media_client",
    "//foundation/multimedia/media_standard/services/services:media_service",
    "//foundation/graphic/graphic:libsurface",
    "//foundation/graphic/graphic/frameworks/surface:surface",
    "//foundation/graphic/graphic/rosen/modules/render_service_client:librender_service_client",
    "//foundation/windowmanager/wm:libwm"
  ]

  resource_config_file = "//foundation/multimedia/media_standard/test/resources/ohos_test.xml"
}
