# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_client_local_config") {
  include_dirs = [
    "//foundation/multimedia/media_standard/services/services/sa_media/client",
    "//foundation/multimedia/media_standard/services/services/player/server",
    "//foundation/multimedia/media_standard/services/services/recorder/server",
    "//foundation/multimedia/media_standard/services/services/factory",
    "//foundation/multimedia/media_standard/services/engine/include",
  ]
}

config("media_client_ipc_config") {
  include_dirs = [
    "//foundation/multimedia/media_standard/services/services/sa_media/client",
    "//foundation/multimedia/media_standard/services/services/sa_media/ipc",
    "//foundation/multimedia/media_standard/services/services/player/client",
    "//foundation/multimedia/media_standard/services/services/player/ipc",
    "//foundation/multimedia/media_standard/services/services/recorder/client",
    "//foundation/multimedia/media_standard/services/services/recorder/ipc",
  ]
}

config("media_client_public_config") {
  include_dirs = [
    "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/player",
    "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/recorder",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
    "//foundation/multimedia/media_standard/services/include",
    "//foundation/multimedia/media_standard/services/utils/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include"
  ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("media_client") {
    install_enable = true
    sources = [
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/player/player_impl.cpp",
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/recorder/recorder_impl.cpp",
        "//foundation/multimedia/media_standard/services/services/sa_media/client/media_client.cpp",
        "//foundation/multimedia/media_standard/services/services/sa_media/ipc/media_service_proxy.cpp",
        "//foundation/multimedia/media_standard/services/services/player/client/player_client.cpp",
        "//foundation/multimedia/media_standard/services/services/player/ipc/player_service_proxy.cpp",
        "//foundation/multimedia/media_standard/services/services/player/ipc/player_listener_stub.cpp",
        "//foundation/multimedia/media_standard/services/services/recorder/client/recorder_client.cpp",
        "//foundation/multimedia/media_standard/services/services/recorder/ipc/recorder_service_proxy.cpp",
        "//foundation/multimedia/media_standard/services/services/recorder/ipc/recorder_listener_stub.cpp",
        "//foundation/multimedia/media_standard/services/services/common/avsharedmemory_ipc.cpp",
        "//foundation/multimedia/media_standard/services/utils/avsharedmemorybase.cpp",
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/common/media_errors.cpp",
    ]

    public_configs = [
        ":media_client_ipc_config",
        ":media_client_public_config",
        "//foundation/graphic/standard/frameworks/surface:surface_public_config"
    ]

    deps = [
        "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
        "//utils/native/base:utils",
        "//utils/native/base:utilsecurec",
        "//foundation/graphic/standard/frameworks/surface:surface",
    ]

    external_deps = [
        "ipc:ipc_core",
        "samgr_L2:samgr_proxy",
        "hiviewdfx_hilog_native:libhilog",
    ]
    subsystem_name = "multimedia"
    part_name = "multimedia_media_standard"
}

ohos_shared_library("media_local") {
    install_enable = true
    sources = [
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/player/player_impl.cpp",
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/recorder/recorder_impl.cpp",
        "//foundation/multimedia/media_standard/services/services/sa_media/client/media_local.cpp",
        "//foundation/multimedia/media_standard/services/services/player/server/player_server.cpp",
        "//foundation/multimedia/media_standard/services/services/recorder/server/recorder_server.cpp",
        "//foundation/multimedia/media_standard/services/services/factory/engine_factory_repo.cpp",
        "//foundation/multimedia/media_standard/frameworks/innerkitsimpl/native/common/media_errors.cpp",
    ]

    public_configs = [
        ":media_client_local_config",
        ":media_client_public_config",
        "//foundation/graphic/standard/frameworks/surface:surface_public_config"
    ]

    deps = [
        "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
        "//utils/native/base:utils",
        "//utils/native/base:utilsecurec",
        "//foundation/graphic/standard/frameworks/surface:surface",
        "//foundation/multimedia/media_standard/services/utils:media_service_utils",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "bytrace_standard:bytrace_core",
        "ipc:ipc_core",
    ]
    subsystem_name = "multimedia"
    part_name = "multimedia_media_standard"
}