# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("native_media_core_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/player_framework/core"
  sources = [
    "//foundation/multimedia/player_framework/interfaces/kits/c/native_averrors.h",
    "//foundation/multimedia/player_framework/interfaces/kits/c/native_avformat.h",
    "//foundation/multimedia/player_framework/interfaces/kits/c/native_avmemory.h",
  ]
}

ohos_ndk_library("libnative_media_core") {
  ndk_description_file = "./libnative_media_core.ndk.json"
  min_compact_version = "1"
  output_name = "native_media_core"
  output_extension = "so"

  system_capability = "SystemCapability.Multimedia.Media.Core"
  system_capability_headers = [
    "native_media/native_averrors.h",
    "native_media/native_avformat.h",
    "native_media/native_avmemory.h",
  ]
}
